Fixed dropcap causing overflow
Fixed the dropcap causing overflow into content under the paragraph.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -1,3 +1,9 @@
+/* Paragraphs
+--------------------------------------------- */
+.has-drop-cap {
+    overflow: auto;
+}
+ 
 /* Buttons
 --------------------------------------------- */
 @import "buttons/buttons";
